--- a/main.html
+++ b/main.html
@@ -11,6 +11,16 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<ol>
+		<li data-ns-test="shoping list">BMW</li>
+		<li data-ns-test="shoping list">House</li>
+		<li data-ns-test="shoping list">Iphone</li>
+	</ol>
+	<ul>
+		<li data-ns-test="Holiday list">JAPAN</li>
+		<li data-ns-test="Holiday list">US</li>
+		<li data-ns-test="Holiday list">EU</li>
+	</ul>
 </body>
 
 </html>
