--- a/main.html
+++ b/main.html
@@ -12,14 +12,14 @@
 </script>
 
 	<ol>
-		<li data-ns-test="shoping list">BMW</li>
-		<li data-ns-test="shoping list">House</li>
-		<li data-ns-test="shoping list">Iphone</li>
+		<li data-ns-test="shoppingList">BMW</li>
+		<li data-ns-test="shoppingList">House</li>
+		<li data-ns-test="shoppingList">Iphone</li>
 	</ol>
 	<ul>
-		<li data-ns-test="Holiday list">JAPAN</li>
-		<li data-ns-test="Holiday list">US</li>
-		<li data-ns-test="Holiday list">EU</li>
+		<li data-ns-test="holidayList">JAPAN</li>
+		<li data-ns-test="holidayList">US</li>
+		<li data-ns-test="holidayList">EU</li>
 	</ul>
 </body>
 
